--- a/ConsumptionSite/Views/PaymentCalculations/Preconditions.cshtml
+++ b/ConsumptionSite/Views/PaymentCalculations/Preconditions.cshtml
@@ -17,20 +17,20 @@
 			<div class="form-group">
 				@Html.LabelFor(model => model.StartingDate, htmlAttributes: new {@class = "control-label col-md-4"})
 				<div class="col-md-4 col-md-push-4">
-					@Html.EditorFor(model => model.StartingDate, new {htmlAttributes = new {@class = "form-control", Title = "A date to include measurements from"}})
+					<input name="StartingDate" class="datepicker" id="StartingDate" data-role="datepicker" data-format="dd-MM-yyyy" />
 					@Html.ValidationMessageFor(model => model.StartingDate, "", new {@class = "text-danger"})
 				</div>
 			</div>
 			<div class="form-group">
 				@Html.LabelFor(model => model.EndingDate, htmlAttributes: new {@class = "control-label col-md-4"})
 				<div class="col-md-4 col-md-push-4">
-					@Html.EditorFor(model => model.EndingDate, new {htmlAttributes = new {@class = "form-control", Title = "A date to include measurements from"}})
+					<input name="EndingDate" class="datepicker" id="EndingDate" data-role="datepicker" data-format="dd-MM-yyyy" />
 					@Html.ValidationMessageFor(model => model.EndingDate, "", new {@class = "text-danger"})
 				</div>
 			</div>
 			<div class="form-group">
 				<div class="col-md-offset-2 col-md-10">
-					<input type="submit" value="Evalueate!" class="btn btn-default btn-primary" />
+					<input type="submit" value="Evalueate!" class="btn btn-default btn-primary btn-lg" />
 				</div>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 	<div class="row">
 		<div class="col-md-5">
 			<label class="title">Consumption Details</label>
-			<table class="table-striped table-responsive table-hover table-bordered">
+			<table class="gridview table-striped table-responsive table-hover table-bordered">
 				<thead class="gridview-header stupid-table-sortable-header">
 				<tr>
 					<td>Consumed</td>
@@ -70,7 +70,7 @@
 		</div>
 		<div class="col-md-5">
 			<label class="title">Tariffs</label>
-			<table class="table-striped table-responsive table-hover table-bordered">
+			<table class="gridview table-striped table-responsive table-hover table-bordered">
 				<thead class="gridview-header stupid-table-sortable-header">
 				<tr>
 					<td>Since</td>
@@ -104,7 +104,7 @@
 		</div>
 		<div class="col-md-2">
 			<label class="title">Consumptions</label>
-			<table class="table-striped table-responsive table-hover table-bordered">
+			<table class="gridview table-striped table-responsive table-hover table-bordered">
 				<thead class="gridview-header stupid-table-sortable-header">
 				<tr>
 					<td>Meter Readings</td>
@@ -133,5 +133,11 @@
 		$(function () {
 			$('table').stupidtable();
 		});
+	</script>
+	
+	<script src="~/Scripts/Kendo/kendo.all.min.js"></script>
+	<script>
+		kendo.init($("#StartingDate"));
+		kendo.init($("#EndingDate"));
 	</script>
 }
